--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="max-w-md">
             <h1 class="mb-5 text-5xl font-bold">Hey, Abrar Ibn Shakil here!</h1>
             <p class="mb-5"><h4>Researcher in Bioelectromagnetism, microwave imaging of diseases. A photographer and a fitness trainer.</h4></p>
-            <button class="btn btn-primary mb-5" style="background-color: #dddddd; border-color: #dddddd; color:#000000;">Get Started</button>
+            <button class="btn btn-primary mb-5" style="background-color: #dddddd; border-color: #dddddd; color:#000000;"><a href=about.html>About Me</a></button>
           </div>
         </div>
       </div>
