--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
           <div class="max-w-md">
             <h1 class="mb-5 text-5xl font-bold">About Me</h1>
             <p class="mb-5"><h4>Skilled in Engineering, Robotics, C (Programming Language), Nonprofit Organizations and Machine Learning. Strong media and communication professional with a Bachelor of Science - BS focused in Electrical and Electronics Engineering from International Islamic University Chittagong. Experienced Content Writer with a demonstrated history of working in the writing and editing industry.</h4></p>
-            <button class="btn btn-primary mb-5">Get Started</button>
+            <button class="btn btn-primary mb-5" style="background-color: #dddddd; border-color: #dddddd; color:#000000;">Get Started</button>
           </div>
         </div>
       </div>
